--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A decentralized lottery application built on Stacks blockchain.">
     <meta name="keywords" content="Lottery, DApp, Stacks, Blockchain, Crypto">
-    <title>Lottery DApp</title>
+    <title>Meme Lottery</title>
     <script src="https://unpkg.com/@stacks/connect@latest/dist/connect.umd.js"></script>
     <script src="https://unpkg.com/@stacks/transactions@latest/dist/transactions.umd.js"></script>
     <script src="https://unpkg.com/@stacks/network@latest/dist/network.umd.js"></script>
