--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     </style>
 </head>
 <body>
-    <h1>Lottery DApp</h1>
+    <h1>Meme Lottery</h1>
 
     <button id="connect-wallet">Connect Wallet</button>
 
